[gd_scene load_steps=9 format=2]

[ext_resource path="res://GHAttackInvert.tres" type="Theme" id=1]
[ext_resource path="res://GHFlatBox.tres" type="StyleBox" id=2]
[ext_resource path="res://bg3.png" type="Texture" id=3]
[ext_resource path="res://GHBigFontInvert.tres" type="DynamicFont" id=4]
[ext_resource path="res://PrefsWindow.gd" type="Script" id=5]

[sub_resource type="StyleBoxLine" id=4]
thickness = 4

[sub_resource type="StyleBoxLine" id=2]
thickness = 4

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PrefsWindow" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 430.0
margin_bottom = 712.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 430.0
margin_bottom = 712.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 416.0
margin_bottom = 698.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="PrefsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 406.0
margin_bottom = 104.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = " Preferences "
align = 1

[node name="TopSep" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 406.0
margin_bottom = 136.0
custom_constants/separation = 32
custom_styles/separator = SubResource( 4 )

[node name="SwapDecks" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 406.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 104 )
text = "Swap Top/Bottom"
align = 1

[node name="TapToDraw" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 406.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 104 )
text = "Tap To Draw Card"
align = 1

[node name="UseFHIcons" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 406.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 104 )
text = "Frosthaven Symbols"
align = 1

[node name="UseFHPerks" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 448.0
margin_right = 406.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 104 )
text = "FH Crossover Perks"

[node name="BottomSep" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 552.0
margin_right = 406.0
margin_bottom = 584.0
custom_constants/separation = 32
custom_styles/separator = SubResource( 2 )

[node name="DoneButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 584.0
margin_right = 406.0
margin_bottom = 688.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Done"

[connection signal="pressed" from="MarginContainer/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
